# Noruno-Platform

./: CHANGELOG.md  MANUAL.md  README.md  REFACTORING.md  SPECIFICATION.md  ToDo.md  index.html  package-lock.json  package.json  reproduction.html  reproduction_cutoff.html  tasks.json  vitest.config.ts
dist-isolation/: index.js
docs/: CHANGELOG.md  MANUAL.md  REFACTORING.md  SPECIFICATION.md  ToDo.md
icon-work/GIMP/: app-icon.xcf
src/: App.css  App.tsx
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_tasks.sql  002_create_groups.sql  003_create_settings.sql  004_create_memos.sql  005_create_folders.sql  006_create_reading_books.sql  007_create_calendar_events.sql
src-tauri/src/: calendar.rs  database.rs  lib.rs  mail.rs  main.rs  memo.rs  notification.rs  reading_memo.rs  settings.rs  task.rs  tests.rs
src-tauri/src/commands/: calendar_commands.rs  memo_commands.rs  mod.rs  reading_commands.rs  task_commands.rs
src/components/: CalendarEventDialog.tsx  CalendarView.tsx  CustomDatePicker.tsx  CustomDropdown.tsx  EditDialog.tsx  GanttView.tsx  SubtaskList.tsx  TaskInput.tsx  TaskList.tsx  TaskRow.tsx
src/components/__tests__/: ContextMenu.test.tsx  CustomDropdown.test.tsx  GanttView.test.tsx  Sidebar.test.tsx  SubtaskList.test.tsx  TaskInput.test.tsx  TaskList.test.tsx  TaskRow.test.tsx
src/components/dashboard/: DashboardView.tsx  (+3 more)
src/styles/: theme.css
src/tauri/: api.ts  calender_api.ts  memo_api.ts  reading_api.ts  task_api.ts
src/types/: index.ts
src/utils/: date.ts
(+21 files in other folders)
